update :  style sheet

--- a/index.html
+++ b/index.html
@@ -2251,9 +2251,9 @@ Actionable Insights
   </div>
   <!-- Click to Chat - https://holithemes.com/plugins/click-to-chat/  v3.32 -->
   <div class="ht-ctc ht-ctc-chat ctc-analytics ctc_wp_desktop style-2" id="ht-ctc-chat"
-    style="display: none; position: fixed; bottom: 15px; right: 15px">
+    style="display: none; position: fixed; bottom: 15px; right: 15px;">
     <div class="ht_ctc_style ht_ctc_chat_style">
-      <div style="display: flex; justify-content: center; align-items: center" class="ctc-analytics ctc_s_2">
+      <div style="display: flex; justify-content: center; align-items: center;" class="ctc-analytics ctc_s_2">
         <p class="ctc-analytics ctc_cta ctc_cta_stick ht-ctc-cta ht-ctc-cta-hover" style="
               padding: 0px 16px;
               line-height: 1.6;
