update :  bug fixed

--- a/index.html
+++ b/index.html
@@ -1659,31 +1659,31 @@ organization -->
                 </div>
                 <div class="feature_right_element_right">
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Foresight & Horizon Planning</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
                   </div>
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Technology Scouting & Monitoring</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
                   </div>
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Opportunity Identification</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
                   </div>
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Market Assessment</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
                   </div>
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Competitive Intelligence</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
@@ -1705,31 +1705,31 @@ organization -->
                 </div>
                 <div class="feature_right_element_right">
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Strategy Development</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
                   </div>
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Market & Business Model Evaluation</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
                   </div>
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Partner Identification & M&A</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
                   </div>
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Sustainability</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
                   </div>
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Continuous Disruption Monitoring</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
@@ -1752,31 +1752,30 @@ organization -->
                 </div>
                 <div class="feature_right_element_right">
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Technology
+                      Adoption</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
                   </div>
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Technology
+                      Commercialization</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
                   </div>
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Company / Technology
+                      Due Diligence</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
                   </div>
                   <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
-                    <div class="features_dot">
-                      <div></div>
-                    </div>
-                  </div>
-                  <div class="feature_right_element_right_featurs_btn_an_text">
-                    <h4>sdfsdf</h4>
+                    <h4>Technology
+                      Implementation
+                      Ecosystem</h4>
                     <div class="features_dot">
                       <div></div>
                     </div>
