update : bug fixed

--- a/index.html
+++ b/index.html
@@ -1815,7 +1815,7 @@ organization -->
                     </div>
                   </section>
                   <h4>
-                    Foresight & Horizon Planning
+                    Technology Scouting & Monitoring
                   </h4>
                 </div>
                 <div> <!-- -->
@@ -1825,7 +1825,7 @@ organization -->
                     </div>
                   </section>
                   <h4>
-                    Foresight & Horizon Planning
+                    Market Assessment
                   </h4>
                 </div>
                 <div> <!-- -->
