update : new feature

--- a/index.html
+++ b/index.html
@@ -1794,7 +1794,7 @@ organization -->
 
               </section>
               <div class="feature_phone_section_pa_btn_">
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1804,7 +1804,7 @@ organization -->
                     Foresight & Horizon Planning
                   </h4>
                 </div>
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1814,7 +1814,7 @@ organization -->
                     Technology Scouting & Monitoring
                   </h4>
                 </div>
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1824,7 +1824,7 @@ organization -->
                     Opportunity Identification
                   </h4>
                 </div>
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1834,7 +1834,7 @@ organization -->
                     Market Assessment
                   </h4>
                 </div>
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1858,7 +1858,7 @@ organization -->
 
               </section>
               <div class="feature_phone_section_pa_btn_">
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1868,7 +1868,7 @@ organization -->
                     Strategy Development
                   </h4>
                 </div>
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1878,7 +1878,7 @@ organization -->
                     Market & Business Model Evaluation
                   </h4>
                 </div>
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1888,7 +1888,7 @@ organization -->
                     Partner Identification & M&A
                   </h4>
                 </div>
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1898,7 +1898,7 @@ organization -->
                     Sustainability
                   </h4>
                 </div>
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1922,7 +1922,7 @@ organization -->
 
               </section>
               <div class="feature_phone_section_pa_btn_">
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1933,7 +1933,7 @@ organization -->
                     Adoption
                   </h4>
                 </div>
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1944,7 +1944,7 @@ organization -->
                     Commercialization
                   </h4>
                 </div>
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
@@ -1955,7 +1955,7 @@ organization -->
                     Due Diligence
                   </h4>
                 </div>
-                <div calss='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
+                <div class ='feature_right_element_right_featurs_btn_an_text_phone'> <!-- -->
                   <section>
                     <div>
 
